--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mysql": "^2.18.1"
   },
   "scripts": {
     "start": "nodemon ./bin/www.js",
