--- a/app/package.json
+++ b/app/package.json
@@ -6,11 +6,14 @@
     "login-lecture": "bin/www.js"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "scripts": {
     "start": "nodemon ./bin/www.js",
