--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "login-lecture": "bin/www.js"
   },
   "dependencies": {
+    "apidoc": "^0.51.0",
     "app-root-path": "^3.0.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
